--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
-    "nodemon": "^1.19.3"
+    "express-handlebars": "^3.1.0",
+    "handlebars": "^4.4.2",
+    "nodemon": "^1.19.3",
+    "pug": "^2.0.4"
   }
 }
