--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "handlebars": "^4.4.2",
+    "mongoose": "^5.7.3",
     "multer": "^1.4.2",
     "nodemon": "^1.19.3",
     "pug": "^2.0.4"
