--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "express-session": "^1.16.2",
     "handlebars": "^4.4.2",
     "mongoose": "^5.7.3",
     "multer": "^1.4.2",
