--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^5.7.3",
     "multer": "^1.4.2",
     "nodemon": "^1.19.3",
-    "pug": "^2.0.4"
+    "pug": "^2.0.4",
+    "sequelize": "^5.19.2"
   }
 }
