--- a/package.json
+++ b/package.json
@@ -9,16 +9,23 @@
   "author": "Vimal Pillai",
   "license": "ISC",
   "dependencies": {
+    "awaitqueue": "^1.0.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.16.2",
     "handlebars": "^4.4.2",
     "mongoose": "^5.7.3",
     "multer": "^1.4.2",
+    "mysql2": "^1.7.0",
     "nodemon": "^1.19.3",
+    "pg": "^7.12.1",
+    "pg-hstore": "^2.3.3",
+    "protoo-server": "^4.0.3",
     "pug": "^2.0.4",
+    "s": "^1.0.0",
     "sequelize": "^5.19.2"
   }
 }
