--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
   "author": "Vimal Pillai",
   "license": "ISC",
   "dependencies": {
+    "@sitespeed.io/throttle": "^0.5.4",
     "awaitqueue": "^1.0.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "debug": "^4.1.1",
+    "dgram": "^1.0.1",
+    "events": "^3.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.16.2",
     "handlebars": "^4.4.2",
+    "mediasoup": "^3.2.5",
     "mongoose": "^5.7.3",
     "multer": "^1.4.2",
     "mysql2": "^1.7.0",
@@ -26,6 +31,7 @@
     "protoo-server": "^4.0.3",
     "pug": "^2.0.4",
     "s": "^1.0.0",
+    "sctp": "0.0.18",
     "sequelize": "^5.19.2"
   }
 }
